# table-rs

./: Cargo.toml  bacon.toml  mise.toml  sample.csv  sample.json  sample.table-rs.json
docs/superpowers/specs/: 2026-04-24-formula-editor-improvements-design.md
src/: main.rs
src/app/: formula_state.rs  keyboard.rs  mod.rs  notifications.rs
src/components/: mod.rs
src/data/: csv_io.rs  formula.rs  mod.rs  operations.rs  recent.rs
src/ui/: col_resize_handle.rs  context_menu.rs  formula_bar.rs  icons.rs  main_panel.rs  menubar.rs  mod.rs  sidebar.rs  table_view.rs  toolbar.rs
