[package]
name = "table-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["advanced", "canvas", "tokio", "lazy", "svg"] }
iced-longbridge = { git = "https://github.com/uxsoft/iced-longbridge", branch = "master" }
csv = "1"
evalexpr = "11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
rfd = "0.15"
dirs = "5"
